--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -5,6 +5,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include head.html %}
+<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+<script src="js/modernizr.js"></script> <!-- Modernizr -->
 </head>
 
 <body id="page">
@@ -14,19 +16,14 @@
 
 <div id="main" role="main">
   <article class="hentry">
-    <div class="entry-content">
-      {{ content }}
-      <footer class="entry-meta">
-        {% if page.modified %}<span>Updated on <span class="entry-date date published updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
-        <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>{% endif %}
-        <!--{% if page.share == true %}{% include social-share.html %}{% endif %}-->
-      </footer>
-    </div><!-- /.entry-content -->
-    {% if page.comments == true %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
+	<section id="cd-timeline" class="cd-container">
+        {{ content }}
+	</section> <!-- cd-timeline -->
   </article>
 </div><!-- /#main -->
 
 {% include scripts.html %}
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 
 <div class="footer-wrapper">
   <footer role="contentinfo">
